--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
     "url": "https://github.com/pikapikapikachuuu/soft-simd"
   },
   "author": "pika",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "benchmark": "^2.1.4",
+    "eslint": "^7.8.1",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "puppeteer": "^5.2.1"
+  }
 }
