--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,18 @@ install(TARGETS softsimd
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-
-add_executable(baseline
-  cpp/baseline.cpp)
-target_link_libraries(baseline
+add_executable(baseline-api
+  cpp/baseline-api.cpp)
+target_link_libraries(baseline-api
   PRIVATE softsimd)
-set_property(TARGET baseline PROPERTY POSITION_INDEPENDENT_CODE ON)
-set_property(TARGET baseline PROPERTY CXX_STANDARD 11)
-set_target_properties(baseline PROPERTIES LINK_FLAGS "-s WASM=1 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1")
+set_property(TARGET baseline-api PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET baseline-api PROPERTY CXX_STANDARD 11)
+set_target_properties(baseline-api PROPERTIES LINK_FLAGS "-s WASM=1 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1")
+
+add_executable(softsimd-api
+  cpp/softsimd-api.cpp)
+target_link_libraries(softsimd-api
+  PRIVATE softsimd)
+set_property(TARGET softsimd-api PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET softsimd-api PROPERTY CXX_STANDARD 11)
+set_target_properties(softsimd-api PROPERTIES LINK_FLAGS "-s WASM=1 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1")
